# unpacked-fingertree

./: cabal.project
measured-sig/: default.nix  measured-sig.cabal
unpacked-fingertree/: README.md  default.nix  unpacked-fingertree.cabal
unpacked-fingertree/src/: FingerTree.hs  Measured.hsig
unpacked-fingertree/src/FingerTree/: Internal.hs
unpacked-fingertree/tests/list-measure/: ListMeasure.hs
unpacked-fingertree/tests/properties/: Main.hs
unpacked-sequence/: unpacked-sequence.cabal
unpacked-sequence/src/: Measured.hsig  Sequence.hs
