name:          measured-sig
category:      Language
version:       1
license:       BSD2
-- license-file:  LICENSE
cabal-version: 2.0
author:        bitdizzy
maintainer:    bitdizzy <dev@bitdizzy.io>
stability:     experimental
homepage:      http://github.com/bitdizzy/unpacked-fingertree/
bug-reports:   http://github.com/bitdizzy/unpacked-fingertree/issues
copyright:     Copyright (C) bitdizzy 2021
build-type:    Simple
synopsis:      Measured elements for unpacked fingertrees
description:   This backpack signature package defines the requirements on FingerTree elements
extra-source-files:
  README.md
  CHANGELOG.md
  -- LICENSE

source-repository head
  type: git
  location: git://github.com/bitdizzy/unpacked-fingertree.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures:
    Measured

  build-depends:
      base >= 4.10 && < 5
