name:          unpacked-fingertree
category:      Language
version:       0
license:       BSD2
-- license-file:  LICENSE
cabal-version: 2.0
author:        bitdizzy
maintainer:    bitdizzy <dev@bitdizzy.io>
stability:     experimental
homepage:      http://github.com/bitdizzy/unpacked-fingertree/
bug-reports:   http://github.com/ekmett/unpacked-fingertree/issues
copyright:     Copyright (C) bitdizzy 2021
build-type:    Simple
synopsis:      Unpacked fingertrees via backpack
description:   This backpack mixin package supplies unpacked fingertrees
extra-source-files:
  README.md
  CHANGELOG.md
  -- LICENSE

source-repository head
  type: git
  location: git://github.com/bitdizzy/unpacked-fingertree.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures:
    Measured

  exposed-modules:
    FingerTree

  build-depends:
    base >= 4.10 && < 5
