name:          unpacked-fingertree
category:      Language
version:       0
license:       BSD2
-- license-file:  LICENSE
cabal-version: 2.0
author:        bitdizzy
maintainer:    bitdizzy <dev@bitdizzy.io>
stability:     experimental
homepage:      http://github.com/bitdizzy/unpacked-fingertree/
bug-reports:   http://github.com/ekmett/unpacked-fingertree/issues
copyright:     Copyright (C) bitdizzy 2021
build-type:    Simple
synopsis:      Unpacked fingertrees via backpack
description:   This backpack mixin package supplies unpacked fingertrees
extra-source-files:
  README.md
  CHANGELOG.md
  -- LICENSE

source-repository head
  type: git
  location: git://github.com/bitdizzy/unpacked-fingertree.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures:
    Measured
  exposed-modules:
    FingerTree

  build-depends:
      base >= 4.10 && < 5
    , deepseq >= 1.4 && < 2
    , mono-traversable >= 1 && < 2
    , QuickCheck

--    , measured-sig >= 1

library list-measure
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: tests/list-measure
  exposed-modules: ListMeasure
  build-depends: base

test-suite properties
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: tests/properties
  build-depends: base
               , unpacked-fingertree
               , mono-traversable
               , mtl
               , list-measure
               , safe
               , tasty
               , tasty-quickcheck
               , transformers
  mixins: unpacked-fingertree (FingerTree as Test.FingerTree) requires (Measured as ListMeasure)
